funky/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INEQUALITY
    WHITESPACE

Grammar

Rule 0     S' -> MODULE_DEFINITION
Rule 1     MODULE_DEFINITION -> MODULE IDENTIFIER WHERE BODY
Rule 2     BODY -> OPEN_BRACE IMPORT_DECLARATIONS ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
Rule 3     BODY -> OPEN_BRACE IMPORT_DECLARATIONS CLOSE_BRACE
Rule 4     BODY -> OPEN_BRACE TOP_DECLARATIONS CLOSE_BRACE
Rule 5     IMPORT_DECLARATIONS -> IMPORT_DECLARATIONS ENDSTATEMENT IMPORT_DECLARATION
Rule 6     IMPORT_DECLARATIONS -> IMPORT_DECLARATION
Rule 7     IMPORT_DECLARATION -> IMPORT IDENTIFIER ENDSTATEMENT
Rule 8     IMPORT_DECLARATION -> IMPORT IDENTIFIER AS IDENTIFIER ENDSTATEMENT
Rule 9     TOP_DECLARATIONS -> TOP_DECLARATIONS ENDSTATEMENT TOP_DECLARATION
Rule 10    TOP_DECLARATIONS -> TOP_DECLARATION
Rule 11    TOP_DECLARATION -> NEWTYPE TYPENAME EQUALS TYPENAME ENDSTATEMENT
Rule 12    TOP_DECLARATION -> DECLARATION
Rule 13    DECLARATIONS -> OPEN_BRACE DECLARATIONS_LIST CLOSE_BRACE
Rule 14    DECLARATIONS -> OPEN_BRACE CLOSE_BRACE
Rule 15    DECLARATIONS_LIST -> DECLARATION ENDSTATEMENT DECLARATIONS_LIST
Rule 16    DECLARATIONS_LIST -> DECLARATION
Rule 17    DECLARATION -> GEN_DECLARATION
Rule 18    DECLARATION -> FUNCTION_LHS RHS
Rule 19    DECLARATION -> PAT RHS
Rule 20    GEN_DECLARATION -> VARS TYPESIG TYPE
Rule 21    GEN_DECLARATION -> FIXITY INTEGER OPS
Rule 22    GEN_DECLARATION -> FIXITY OPS
Rule 23    GEN_DECLARATION -> <empty>
Rule 24    OPS -> OPS COMMA OP
Rule 25    OPS -> OP
Rule 26    VARS -> VARS COMMA IDENTIFIER
Rule 27    VARS -> IDENTIFIER
Rule 28    FIXITY -> INFIXL
Rule 29    FIXITY -> INFIXR
Rule 30    FIXITY -> INFIX
Rule 31    TYPE -> BTYPE
Rule 32    TYPE -> BTYPE ARROW TYPE
Rule 33    BTYPE -> ATYPE
Rule 34    BTYPE -> BTYPE ATYPE
Rule 35    ATYPE -> TYPENAME
Rule 36    ATYPE -> OPEN_PAREN TYPES_LIST CLOSE_PAREN
Rule 37    ATYPE -> OPEN_PAREN TYPE CLOSE_PAREN
Rule 38    ATYPE -> OPEN_SQUARE TYPE CLOSE_SQUARE
Rule 39    FUNCTION_LHS -> IDENTIFIER APAT APATS
Rule 40    FUNCTION_LHS -> PAT VAROP PAT
Rule 41    FUNCTION_LHS -> OPEN_PAREN FUNCTION_LHS CLOSE_PAREN APAT APATS
Rule 42    RHS -> EQUALS EXP
Rule 43    RHS -> EQUALS EXP WHERE DECLARATIONS
Rule 44    RHS -> GDRHS
Rule 45    RHS -> GDRHS WHERE DECLARATIONS
Rule 46    GDRHS -> GUARDS EQUALS EXP
Rule 47    GDRHS -> GUARDS EQUALS EXP GDRHS
Rule 48    GUARDS -> PIPE GUARD_LIST
Rule 49    GUARD_LIST -> GUARD_LIST GUARD
Rule 50    GUARD_LIST -> GUARD
Rule 51    GUARD -> INFIX_EXP
Rule 52    EXP -> INFIX_EXP
Rule 53    INFIX_EXP -> LEXP OP INFIX_EXP
Rule 54    INFIX_EXP -> MINUS INFIX_EXP
Rule 55    INFIX_EXP -> LEXP
Rule 56    LEXP -> LAMBDA APAT APATS ARROW EXP
Rule 57    LEXP -> LET DECLARATIONS IN EXP
Rule 58    LEXP -> IF EXP THEN EXP ELSE EXP
Rule 59    LEXP -> MATCH EXP OF OPEN_BRACE ALTS CLOSE_BRACE
Rule 60    LEXP -> FEXP
Rule 61    FEXP -> FEXP AEXP
Rule 62    FEXP -> AEXP
Rule 63    AEXP -> IDENTIFIER
Rule 64    AEXP -> GCON
Rule 65    AEXP -> LITERAL
Rule 66    AEXP -> OPEN_PAREN EXP CLOSE_PAREN
Rule 67    AEXP -> OPEN_PAREN EXP COMMA EXP_LIST CLOSE_PAREN
Rule 68    AEXP -> OPEN_SQUARE EXP CLOSE_SQUARE
Rule 69    AEXP -> OPEN_SQUARE EXP COMMA EXP_LIST CLOSE_SQUARE
Rule 70    ALTS -> ALTS ALT ENDSTATEMENT
Rule 71    ALTS -> ALT
Rule 72    ALT -> PAT ARROW EXP
Rule 73    ALT -> <empty>
Rule 74    PAT -> LPAT CONSTRUCTOR PAT
Rule 75    PAT -> LPAT
Rule 76    LPAT -> APAT
Rule 77    LPAT -> MINUS OPEN_PAREN INTEGER CLOSE_PAREN
Rule 78    LPAT -> MINUS OPEN_PAREN FLOAT CLOSE_PAREN
Rule 79    APAT -> IDENTIFIER
Rule 80    APAT -> GCON
Rule 81    APAT -> LITERAL
Rule 82    APAT -> WILDCARD
Rule 83    APAT -> OPEN_PAREN PAT CLOSE_PAREN
Rule 84    APAT -> OPEN_PAREN PAT COMMA PAT_LIST CLOSE_PAREN
Rule 85    APAT -> OPEN_SQUARE PAT_LIST CLOSE_SQUARE
Rule 86    GCON -> OPEN_PAREN CLOSE_PAREN
Rule 87    GCON -> OPEN_SQUARE CLOSE_SQUARE
Rule 88    VAROP -> VARSYM
Rule 89    VAROP -> BACKTICK IDENTIFIER BACKTICK
Rule 90    OP -> VAROP
Rule 91    EXP_LIST -> EXP_LIST COMMA EXP
Rule 92    EXP_LIST -> EXP
Rule 93    APATS -> APAT APATS
Rule 94    APATS -> <empty>
Rule 95    PAT_LIST -> PAT_LIST COMMA PAT
Rule 96    PAT_LIST -> PAT
Rule 97    VARSYM -> PLUS
Rule 98    VARSYM -> MINUS
Rule 99    VARSYM -> TIMES
Rule 100   VARSYM -> DIVIDE
Rule 101   VARSYM -> POW
Rule 102   VARSYM -> EQUALITY
Rule 103   VARSYM -> LESS
Rule 104   VARSYM -> LEQ
Rule 105   VARSYM -> GREATER
Rule 106   VARSYM -> GEQ
Rule 107   TYPES_LIST -> TYPES_LIST COMMA TYPE
Rule 108   TYPES_LIST -> TYPE
Rule 109   LITERAL -> INTEGER
Rule 110   LITERAL -> FLOAT
Rule 111   LITERAL -> CHAR
Rule 112   LITERAL -> STRING

Terminals, with rules where they appear

ARROW                : 32 56 72
AS                   : 8
BACKTICK             : 89 89
CHAR                 : 111
CLOSE_BRACE          : 2 3 4 13 14 59
CLOSE_PAREN          : 36 37 41 66 67 77 78 83 84 86
CLOSE_SQUARE         : 38 68 69 85 87
COMMA                : 24 26 67 69 84 91 95 107
CONSTRUCTOR          : 74
DIVIDE               : 100
ELSE                 : 58
ENDSTATEMENT         : 2 5 7 8 9 11 15 70
EQUALITY             : 102
EQUALS               : 11 42 43 46 47
FLOAT                : 78 110
GEQ                  : 106
GREATER              : 105
IDENTIFIER           : 1 7 8 8 26 27 39 63 79 89
IF                   : 58
IMPORT               : 7 8
IN                   : 57
INEQUALITY           : 
INFIX                : 30
INFIXL               : 28
INFIXR               : 29
INTEGER              : 21 77 109
LAMBDA               : 56
LEQ                  : 104
LESS                 : 103
LET                  : 57
MATCH                : 59
MINUS                : 54 77 78 98
MODULE               : 1
NEWTYPE              : 11
OF                   : 59
OPEN_BRACE           : 2 3 4 13 14 59
OPEN_PAREN           : 36 37 41 66 67 77 78 83 84 86
OPEN_SQUARE          : 38 68 69 85 87
PIPE                 : 48
PLUS                 : 97
POW                  : 101
STRING               : 112
THEN                 : 58
TIMES                : 99
TYPENAME             : 11 11 35
TYPESIG              : 20
WHERE                : 1 43 45
WHITESPACE           : 
WILDCARD             : 82
error                : 

Nonterminals, with rules where they appear

AEXP                 : 61 62
ALT                  : 70 71
ALTS                 : 59 70
APAT                 : 39 41 56 76 93
APATS                : 39 41 56 93
ATYPE                : 33 34
BODY                 : 1
BTYPE                : 31 32 34
DECLARATION          : 12 15 16
DECLARATIONS         : 43 45 57
DECLARATIONS_LIST    : 13 15
EXP                  : 42 43 46 47 56 57 58 58 58 59 66 67 68 69 72 91 92
EXP_LIST             : 67 69 91
FEXP                 : 60 61
FIXITY               : 21 22
FUNCTION_LHS         : 18 41
GCON                 : 64 80
GDRHS                : 44 45 47
GEN_DECLARATION      : 17
GUARD                : 49 50
GUARDS               : 46 47
GUARD_LIST           : 48 49
IMPORT_DECLARATION   : 5 6
IMPORT_DECLARATIONS  : 2 3 5
INFIX_EXP            : 51 52 53 54
LEXP                 : 53 55
LITERAL              : 65 81
LPAT                 : 74 75
MODULE_DEFINITION    : 0
OP                   : 24 25 53
OPS                  : 21 22 24
PAT                  : 19 40 40 72 74 83 84 95 96
PAT_LIST             : 84 85 95
RHS                  : 18 19
TOP_DECLARATION      : 9 10
TOP_DECLARATIONS     : 2 4 9
TYPE                 : 20 32 37 38 107 108
TYPES_LIST           : 36 107
VAROP                : 40 90
VARS                 : 20 26
VARSYM               : 88

Parsing method: LALR

state 0

    (0) S' -> . MODULE_DEFINITION
    (1) MODULE_DEFINITION -> . MODULE IDENTIFIER WHERE BODY

    MODULE          shift and go to state 2

    MODULE_DEFINITION              shift and go to state 1

state 1

    (0) S' -> MODULE_DEFINITION .



state 2

    (1) MODULE_DEFINITION -> MODULE . IDENTIFIER WHERE BODY

    IDENTIFIER      shift and go to state 3


state 3

    (1) MODULE_DEFINITION -> MODULE IDENTIFIER . WHERE BODY

    WHERE           shift and go to state 4


state 4

    (1) MODULE_DEFINITION -> MODULE IDENTIFIER WHERE . BODY
    (2) BODY -> . OPEN_BRACE IMPORT_DECLARATIONS ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
    (3) BODY -> . OPEN_BRACE IMPORT_DECLARATIONS CLOSE_BRACE
    (4) BODY -> . OPEN_BRACE TOP_DECLARATIONS CLOSE_BRACE

    OPEN_BRACE      shift and go to state 6

    BODY                           shift and go to state 5

state 5

    (1) MODULE_DEFINITION -> MODULE IDENTIFIER WHERE BODY .

    $end            reduce using rule 1 (MODULE_DEFINITION -> MODULE IDENTIFIER WHERE BODY .)


state 6

    (2) BODY -> OPEN_BRACE . IMPORT_DECLARATIONS ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
    (3) BODY -> OPEN_BRACE . IMPORT_DECLARATIONS CLOSE_BRACE
    (4) BODY -> OPEN_BRACE . TOP_DECLARATIONS CLOSE_BRACE
    (5) IMPORT_DECLARATIONS -> . IMPORT_DECLARATIONS ENDSTATEMENT IMPORT_DECLARATION
    (6) IMPORT_DECLARATIONS -> . IMPORT_DECLARATION
    (9) TOP_DECLARATIONS -> . TOP_DECLARATIONS ENDSTATEMENT TOP_DECLARATION
    (10) TOP_DECLARATIONS -> . TOP_DECLARATION
    (7) IMPORT_DECLARATION -> . IMPORT IDENTIFIER ENDSTATEMENT
    (8) IMPORT_DECLARATION -> . IMPORT IDENTIFIER AS IDENTIFIER ENDSTATEMENT
    (11) TOP_DECLARATION -> . NEWTYPE TYPENAME EQUALS TYPENAME ENDSTATEMENT
    (12) TOP_DECLARATION -> . DECLARATION
    (17) DECLARATION -> . GEN_DECLARATION
    (18) DECLARATION -> . FUNCTION_LHS RHS
    (19) DECLARATION -> . PAT RHS
    (20) GEN_DECLARATION -> . VARS TYPESIG TYPE
    (21) GEN_DECLARATION -> . FIXITY INTEGER OPS
    (22) GEN_DECLARATION -> . FIXITY OPS
    (23) GEN_DECLARATION -> .
    (39) FUNCTION_LHS -> . IDENTIFIER APAT APATS
    (40) FUNCTION_LHS -> . PAT VAROP PAT
    (41) FUNCTION_LHS -> . OPEN_PAREN FUNCTION_LHS CLOSE_PAREN APAT APATS
    (74) PAT -> . LPAT CONSTRUCTOR PAT
    (75) PAT -> . LPAT
    (26) VARS -> . VARS COMMA IDENTIFIER
    (27) VARS -> . IDENTIFIER
    (28) FIXITY -> . INFIXL
    (29) FIXITY -> . INFIXR
    (30) FIXITY -> . INFIX
    (76) LPAT -> . APAT
    (77) LPAT -> . MINUS OPEN_PAREN INTEGER CLOSE_PAREN
    (78) LPAT -> . MINUS OPEN_PAREN FLOAT CLOSE_PAREN
    (79) APAT -> . IDENTIFIER
    (80) APAT -> . GCON
    (81) APAT -> . LITERAL
    (82) APAT -> . WILDCARD
    (83) APAT -> . OPEN_PAREN PAT CLOSE_PAREN
    (84) APAT -> . OPEN_PAREN PAT COMMA PAT_LIST CLOSE_PAREN
    (85) APAT -> . OPEN_SQUARE PAT_LIST CLOSE_SQUARE
    (86) GCON -> . OPEN_PAREN CLOSE_PAREN
    (87) GCON -> . OPEN_SQUARE CLOSE_SQUARE
    (109) LITERAL -> . INTEGER
    (110) LITERAL -> . FLOAT
    (111) LITERAL -> . CHAR
    (112) LITERAL -> . STRING

    IMPORT          shift and go to state 11
    NEWTYPE         shift and go to state 13
    CLOSE_BRACE     reduce using rule 23 (GEN_DECLARATION -> .)
    ENDSTATEMENT    reduce using rule 23 (GEN_DECLARATION -> .)
    IDENTIFIER      shift and go to state 12
    OPEN_PAREN      shift and go to state 22
    INFIXL          shift and go to state 24
    INFIXR          shift and go to state 25
    INFIX           shift and go to state 26
    MINUS           shift and go to state 27
    WILDCARD        shift and go to state 31
    OPEN_SQUARE     shift and go to state 32
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 28
    CHAR            shift and go to state 33
    STRING          shift and go to state 34

    IMPORT_DECLARATIONS            shift and go to state 7
    TOP_DECLARATIONS               shift and go to state 8
    IMPORT_DECLARATION             shift and go to state 9
    TOP_DECLARATION                shift and go to state 10
    DECLARATION                    shift and go to state 14
    GEN_DECLARATION                shift and go to state 15
    FUNCTION_LHS                   shift and go to state 16
    PAT                            shift and go to state 17
    VARS                           shift and go to state 18
    FIXITY                         shift and go to state 19
    APAT                           shift and go to state 21
    LPAT                           shift and go to state 23
    GCON                           shift and go to state 29
    LITERAL                        shift and go to state 30

state 7

    (2) BODY -> OPEN_BRACE IMPORT_DECLARATIONS . ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
    (3) BODY -> OPEN_BRACE IMPORT_DECLARATIONS . CLOSE_BRACE
    (5) IMPORT_DECLARATIONS -> IMPORT_DECLARATIONS . ENDSTATEMENT IMPORT_DECLARATION

    ENDSTATEMENT    shift and go to state 35
    CLOSE_BRACE     shift and go to state 36


state 8

    (4) BODY -> OPEN_BRACE TOP_DECLARATIONS . CLOSE_BRACE
    (9) TOP_DECLARATIONS -> TOP_DECLARATIONS . ENDSTATEMENT TOP_DECLARATION

    CLOSE_BRACE     shift and go to state 37
    ENDSTATEMENT    shift and go to state 38


state 9

    (6) IMPORT_DECLARATIONS -> IMPORT_DECLARATION .

    ENDSTATEMENT    reduce using rule 6 (IMPORT_DECLARATIONS -> IMPORT_DECLARATION .)
    CLOSE_BRACE     reduce using rule 6 (IMPORT_DECLARATIONS -> IMPORT_DECLARATION .)


state 10

    (10) TOP_DECLARATIONS -> TOP_DECLARATION .

    CLOSE_BRACE     reduce using rule 10 (TOP_DECLARATIONS -> TOP_DECLARATION .)
    ENDSTATEMENT    reduce using rule 10 (TOP_DECLARATIONS -> TOP_DECLARATION .)


state 11

    (7) IMPORT_DECLARATION -> IMPORT . IDENTIFIER ENDSTATEMENT
    (8) IMPORT_DECLARATION -> IMPORT . IDENTIFIER AS IDENTIFIER ENDSTATEMENT

    IDENTIFIER      shift and go to state 39


state 12

    (39) FUNCTION_LHS -> IDENTIFIER . APAT APATS
    (27) VARS -> IDENTIFIER .
    (79) APAT -> IDENTIFIER .
    (79) APAT -> . IDENTIFIER
    (80) APAT -> . GCON
    (81) APAT -> . LITERAL
    (82) APAT -> . WILDCARD
    (83) APAT -> . OPEN_PAREN PAT CLOSE_PAREN
    (84) APAT -> . OPEN_PAREN PAT COMMA PAT_LIST CLOSE_PAREN
    (85) APAT -> . OPEN_SQUARE PAT_LIST CLOSE_SQUARE
    (86) GCON -> . OPEN_PAREN CLOSE_PAREN
    (87) GCON -> . OPEN_SQUARE CLOSE_SQUARE
    (109) LITERAL -> . INTEGER
    (110) LITERAL -> . FLOAT
    (111) LITERAL -> . CHAR
    (112) LITERAL -> . STRING

    TYPESIG         reduce using rule 27 (VARS -> IDENTIFIER .)
    COMMA           reduce using rule 27 (VARS -> IDENTIFIER .)
    CONSTRUCTOR     reduce using rule 79 (APAT -> IDENTIFIER .)
    EQUALS          reduce using rule 79 (APAT -> IDENTIFIER .)
    BACKTICK        reduce using rule 79 (APAT -> IDENTIFIER .)
    PLUS            reduce using rule 79 (APAT -> IDENTIFIER .)
    MINUS           reduce using rule 79 (APAT -> IDENTIFIER .)
    TIMES           reduce using rule 79 (APAT -> IDENTIFIER .)
    DIVIDE          reduce using rule 79 (APAT -> IDENTIFIER .)
    POW             reduce using rule 79 (APAT -> IDENTIFIER .)
    EQUALITY        reduce using rule 79 (APAT -> IDENTIFIER .)
    LESS            reduce using rule 79 (APAT -> IDENTIFIER .)
    LEQ             reduce using rule 79 (APAT -> IDENTIFIER .)
    GREATER         reduce using rule 79 (APAT -> IDENTIFIER .)
    GEQ             reduce using rule 79 (APAT -> IDENTIFIER .)
    PIPE            reduce using rule 79 (APAT -> IDENTIFIER .)
    IDENTIFIER      shift and go to state 40
    WILDCARD        shift and go to state 31
    OPEN_PAREN      shift and go to state 42
    OPEN_SQUARE     shift and go to state 32
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 28
    CHAR            shift and go to state 33
    STRING          shift and go to state 34

    APAT                           shift and go to state 41
    GCON                           shift and go to state 29
    LITERAL                        shift and go to state 30

state 13

    (11) TOP_DECLARATION -> NEWTYPE . TYPENAME EQUALS TYPENAME ENDSTATEMENT

    TYPENAME        shift and go to state 43


state 14

    (12) TOP_DECLARATION -> DECLARATION .

    CLOSE_BRACE     reduce using rule 12 (TOP_DECLARATION -> DECLARATION .)
    ENDSTATEMENT    reduce using rule 12 (TOP_DECLARATION -> DECLARATION .)


state 15

    (17) DECLARATION -> GEN_DECLARATION .

    CLOSE_BRACE     reduce using rule 17 (DECLARATION -> GEN_DECLARATION .)
    ENDSTATEMENT    reduce using rule 17 (DECLARATION -> GEN_DECLARATION .)


state 16

    (18) DECLARATION -> FUNCTION_LHS . RHS
    (42) RHS -> . EQUALS EXP
    (43) RHS -> . EQUALS EXP WHERE DECLARATIONS
    (44) RHS -> . GDRHS
    (45) RHS -> . GDRHS WHERE DECLARATIONS
    (46) GDRHS -> . GUARDS EQUALS EXP
    (47) GDRHS -> . GUARDS EQUALS EXP GDRHS
    (48) GUARDS -> . PIPE GUARD_LIST

    EQUALS          shift and go to state 45
    PIPE            shift and go to state 48

    RHS                            shift and go to state 44
    GDRHS                          shift and go to state 46
    GUARDS                         shift and go to state 47

state 17

    (19) DECLARATION -> PAT . RHS
    (40) FUNCTION_LHS -> PAT . VAROP PAT
    (42) RHS -> . EQUALS EXP
    (43) RHS -> . EQUALS EXP WHERE DECLARATIONS
    (44) RHS -> . GDRHS
    (45) RHS -> . GDRHS WHERE DECLARATIONS
    (88) VAROP -> . VARSYM
    (89) VAROP -> . BACKTICK IDENTIFIER BACKTICK
    (46) GDRHS -> . GUARDS EQUALS EXP
    (47) GDRHS -> . GUARDS EQUALS EXP GDRHS
    (97) VARSYM -> . PLUS
    (98) VARSYM -> . MINUS
    (99) VARSYM -> . TIMES
    (100) VARSYM -> . DIVIDE
    (101) VARSYM -> . POW
    (102) VARSYM -> . EQUALITY
    (103) VARSYM -> . LESS
    (104) VARSYM -> . LEQ
    (105) VARSYM -> . GREATER
    (106) VARSYM -> . GEQ
    (48) GUARDS -> . PIPE GUARD_LIST

    EQUALS          shift and go to state 45
    BACKTICK        shift and go to state 52
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    TIMES           shift and go to state 55
    DIVIDE          shift and go to state 56
    POW             shift and go to state 57
    EQUALITY        shift and go to state 58
    LESS            shift and go to state 59
    LEQ             shift and go to state 60
    GREATER         shift and go to state 61
    GEQ             shift and go to state 62
    PIPE            shift and go to state 48

    RHS                            shift and go to state 49
    VAROP                          shift and go to state 50
    GDRHS                          shift and go to state 46
    VARSYM                         shift and go to state 51
    GUARDS                         shift and go to state 47

state 18

    (20) GEN_DECLARATION -> VARS . TYPESIG TYPE
    (26) VARS -> VARS . COMMA IDENTIFIER

    TYPESIG         shift and go to state 63
    COMMA           shift and go to state 64


state 19

    (21) GEN_DECLARATION -> FIXITY . INTEGER OPS
    (22) GEN_DECLARATION -> FIXITY . OPS
    (24) OPS -> . OPS COMMA OP
    (25) OPS -> . OP
    (90) OP -> . VAROP
    (88) VAROP -> . VARSYM
    (89) VAROP -> . BACKTICK IDENTIFIER BACKTICK
    (97) VARSYM -> . PLUS
    (98) VARSYM -> . MINUS
    (99) VARSYM -> . TIMES
    (100) VARSYM -> . DIVIDE
    (101) VARSYM -> . POW
    (102) VARSYM -> . EQUALITY
    (103) VARSYM -> . LESS
    (104) VARSYM -> . LEQ
    (105) VARSYM -> . GREATER
    (106) VARSYM -> . GEQ

    INTEGER         shift and go to state 65
    BACKTICK        shift and go to state 52
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    TIMES           shift and go to state 55
    DIVIDE          shift and go to state 56
    POW             shift and go to state 57
    EQUALITY        shift and go to state 58
    LESS            shift and go to state 59
    LEQ             shift and go to state 60
    GREATER         shift and go to state 61
    GEQ             shift and go to state 62

    OPS                            shift and go to state 66
    OP                             shift and go to state 67
    VAROP                          shift and go to state 68
    VARSYM                         shift and go to state 51

state 20

    (109) LITERAL -> INTEGER .

    CONSTRUCTOR     reduce using rule 109 (LITERAL -> INTEGER .)
    EQUALS          reduce using rule 109 (LITERAL -> INTEGER .)
    BACKTICK        reduce using rule 109 (LITERAL -> INTEGER .)
    PLUS            reduce using rule 109 (LITERAL -> INTEGER .)
    MINUS           reduce using rule 109 (LITERAL -> INTEGER .)
    TIMES           reduce using rule 109 (LITERAL -> INTEGER .)
    DIVIDE          reduce using rule 109 (LITERAL -> INTEGER .)
    POW             reduce using rule 109 (LITERAL -> INTEGER .)
    EQUALITY        reduce using rule 109 (LITERAL -> INTEGER .)
    LESS            reduce using rule 109 (LITERAL -> INTEGER .)
    LEQ             reduce using rule 109 (LITERAL -> INTEGER .)
    GREATER         reduce using rule 109 (LITERAL -> INTEGER .)
    GEQ             reduce using rule 109 (LITERAL -> INTEGER .)
    PIPE            reduce using rule 109 (LITERAL -> INTEGER .)
    IDENTIFIER      reduce using rule 109 (LITERAL -> INTEGER .)
    WILDCARD        reduce using rule 109 (LITERAL -> INTEGER .)
    OPEN_PAREN      reduce using rule 109 (LITERAL -> INTEGER .)
    OPEN_SQUARE     reduce using rule 109 (LITERAL -> INTEGER .)
    INTEGER         reduce using rule 109 (LITERAL -> INTEGER .)
    FLOAT           reduce using rule 109 (LITERAL -> INTEGER .)
    CHAR            reduce using rule 109 (LITERAL -> INTEGER .)
    STRING          reduce using rule 109 (LITERAL -> INTEGER .)
    CLOSE_PAREN     reduce using rule 109 (LITERAL -> INTEGER .)
    COMMA           reduce using rule 109 (LITERAL -> INTEGER .)
    CLOSE_SQUARE    reduce using rule 109 (LITERAL -> INTEGER .)
    WHERE           reduce using rule 109 (LITERAL -> INTEGER .)
    CLOSE_BRACE     reduce using rule 109 (LITERAL -> INTEGER .)
    ENDSTATEMENT    reduce using rule 109 (LITERAL -> INTEGER .)
    LAMBDA          reduce using rule 109 (LITERAL -> INTEGER .)
    LET             reduce using rule 109 (LITERAL -> INTEGER .)
    IF              reduce using rule 109 (LITERAL -> INTEGER .)
    MATCH           reduce using rule 109 (LITERAL -> INTEGER .)
    ARROW           reduce using rule 109 (LITERAL -> INTEGER .)
    THEN            reduce using rule 109 (LITERAL -> INTEGER .)
    OF              reduce using rule 109 (LITERAL -> INTEGER .)
    ELSE            reduce using rule 109 (LITERAL -> INTEGER .)


state 21

    (76) LPAT -> APAT .

    CONSTRUCTOR     reduce using rule 76 (LPAT -> APAT .)
    EQUALS          reduce using rule 76 (LPAT -> APAT .)
    BACKTICK        reduce using rule 76 (LPAT -> APAT .)
    PLUS            reduce using rule 76 (LPAT -> APAT .)
    MINUS           reduce using rule 76 (LPAT -> APAT .)
    TIMES           reduce using rule 76 (LPAT -> APAT .)
    DIVIDE          reduce using rule 76 (LPAT -> APAT .)
    POW             reduce using rule 76 (LPAT -> APAT .)
    EQUALITY        reduce using rule 76 (LPAT -> APAT .)
    LESS            reduce using rule 76 (LPAT -> APAT .)
    LEQ             reduce using rule 76 (LPAT -> APAT .)
    GREATER         reduce using rule 76 (LPAT -> APAT .)
    GEQ             reduce using rule 76 (LPAT -> APAT .)
    PIPE            reduce using rule 76 (LPAT -> APAT .)
    CLOSE_PAREN     reduce using rule 76 (LPAT -> APAT .)
    COMMA           reduce using rule 76 (LPAT -> APAT .)
    CLOSE_SQUARE    reduce using rule 76 (LPAT -> APAT .)
    ARROW           reduce using rule 76 (LPAT -> APAT .)


state 22

    (41) FUNCTION_LHS -> OPEN_PAREN . FUNCTION_LHS CLOSE_PAREN APAT APATS
    (83) APAT -> OPEN_PAREN . PAT CLOSE_PAREN
    (84) APAT -> OPEN_PAREN . PAT COMMA PAT_LIST CLOSE_PAREN
    (86) GCON -> OPEN_PAREN . CLOSE_PAREN
    (39) FUNCTION_LHS -> . IDENTIFIER APAT APATS
    (40) FUNCTION_LHS -> . PAT VAROP PAT
    (41) FUNCTION_LHS -> . OPEN_PAREN FUNCTION_LHS CLOSE_PAREN APAT APATS
    (74) PAT -> . LPAT CONSTRUCTOR PAT
    (75) PAT -> . LPAT
    (76) LPAT -> . APAT
    (77) LPAT -> . MINUS OPEN_PAREN INTEGER CLOSE_PAREN
    (78) LPAT -> . MINUS OPEN_PAREN FLOAT CLOSE_PAREN
    (79) APAT -> . IDENTIFIER
    (80) APAT -> . GCON
    (81) APAT -> . LITERAL
    (82) APAT -> . WILDCARD
    (83) APAT -> . OPEN_PAREN PAT CLOSE_PAREN
    (84) APAT -> . OPEN_PAREN PAT COMMA PAT_LIST CLOSE_PAREN
    (85) APAT -> . OPEN_SQUARE PAT_LIST CLOSE_SQUARE
    (86) GCON -> . OPEN_PAREN CLOSE_PAREN
    (87) GCON -> . OPEN_SQUARE CLOSE_SQUARE
    (109) LITERAL -> . INTEGER
    (110) LITERAL -> . FLOAT
    (111) LITERAL -> . CHAR
    (112) LITERAL -> . STRING

    CLOSE_PAREN     shift and go to state 70
    IDENTIFIER      shift and go to state 72
    OPEN_PAREN      shift and go to state 22
    MINUS           shift and go to state 27
    WILDCARD        shift and go to state 31
    OPEN_SQUARE     shift and go to state 32
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 28
    CHAR            shift and go to state 33
    STRING          shift and go to state 34

    FUNCTION_LHS                   shift and go to state 69
    APAT                           shift and go to state 21
    PAT                            shift and go to state 71
    LPAT                           shift and go to state 23
    GCON                           shift and go to state 29
    LITERAL                        shift and go to state 30

state 23

    (74) PAT -> LPAT . CONSTRUCTOR PAT
    (75) PAT -> LPAT .

    CONSTRUCTOR     shift and go to state 73
    EQUALS          reduce using rule 75 (PAT -> LPAT .)
    BACKTICK        reduce using rule 75 (PAT -> LPAT .)
    PLUS            reduce using rule 75 (PAT -> LPAT .)
    MINUS           reduce using rule 75 (PAT -> LPAT .)
    TIMES           reduce using rule 75 (PAT -> LPAT .)
    DIVIDE          reduce using rule 75 (PAT -> LPAT .)
    POW             reduce using rule 75 (PAT -> LPAT .)
    EQUALITY        reduce using rule 75 (PAT -> LPAT .)
    LESS            reduce using rule 75 (PAT -> LPAT .)
    LEQ             reduce using rule 75 (PAT -> LPAT .)
    GREATER         reduce using rule 75 (PAT -> LPAT .)
    GEQ             reduce using rule 75 (PAT -> LPAT .)
    PIPE            reduce using rule 75 (PAT -> LPAT .)
    CLOSE_PAREN     reduce using rule 75 (PAT -> LPAT .)
    COMMA           reduce using rule 75 (PAT -> LPAT .)
    CLOSE_SQUARE    reduce using rule 75 (PAT -> LPAT .)
    ARROW           reduce using rule 75 (PAT -> LPAT .)


state 24

    (28) FIXITY -> INFIXL .

    INTEGER         reduce using rule 28 (FIXITY -> INFIXL .)
    BACKTICK        reduce using rule 28 (FIXITY -> INFIXL .)
    PLUS            reduce using rule 28 (FIXITY -> INFIXL .)
    MINUS           reduce using rule 28 (FIXITY -> INFIXL .)
    TIMES           reduce using rule 28 (FIXITY -> INFIXL .)
    DIVIDE          reduce using rule 28 (FIXITY -> INFIXL .)
    POW             reduce using rule 28 (FIXITY -> INFIXL .)
    EQUALITY        reduce using rule 28 (FIXITY -> INFIXL .)
    LESS            reduce using rule 28 (FIXITY -> INFIXL .)
    LEQ             reduce using rule 28 (FIXITY -> INFIXL .)
    GREATER         reduce using rule 28 (FIXITY -> INFIXL .)
    GEQ             reduce using rule 28 (FIXITY -> INFIXL .)


state 25

    (29) FIXITY -> INFIXR .
